--- a/my-vue-app/index.html
+++ b/my-vue-app/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link
+      href="/dist/output.css"
+      rel="stylesheet"
+      type="text/css"
+      href="style.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manga Store</title>
   </head>
